WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
38215
SVG as background image renders incorrectly after zooming
https://bugs.webkit.org/show_bug.cgi?id=38215
Summary
SVG as background image renders incorrectly after zooming
Simon Fraser (smfr)
Reported
2010-04-27 13:43:16 PDT
In the attached testcase: 1. Zoom with Comman+ a few times 2. Scroll the window so the div is partially revealed 3. Note how the SVG background is not drawn in the correct place.
Attachments
SVG file for testcase (open the HTML file below to test)
(5.50 KB, image/svg+xml)
2010-04-27 13:43 PDT
,
Simon Fraser (smfr)
no flags
Details
Testcase
(600 bytes, text/html)
2010-04-27 13:44 PDT
,
Simon Fraser (smfr)
no flags
Details
Fixed testcase
(638 bytes, text/html)
2010-04-27 20:35 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(22.25 KB, patch)
2010-04-27 21:10 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-04-27 13:43:57 PDT
Created
attachment 54448
[details]
SVG file for testcase (open the HTML file below to test)
Simon Fraser (smfr)
Comment 2
2010-04-27 13:44:47 PDT
Created
attachment 54449
[details]
Testcase
Simon Fraser (smfr)
Comment 3
2010-04-27 13:45:12 PDT
<
rdar://problem/7913875
>
Simon Fraser (smfr)
Comment 4
2010-04-27 20:35:49 PDT
Created
attachment 54510
[details]
Fixed testcase
Simon Fraser (smfr)
Comment 5
2010-04-27 21:10:36 PDT
Created
attachment 54520
[details]
Patch
Simon Fraser (smfr)
Comment 6
2010-04-27 21:21:15 PDT
http://trac.webkit.org/changeset/58375
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug